# ecom_agent

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: mainAgent.py  ner_agent.py  semantic_search_agnet.py
templates/: index.html
tools/: __init__.py  ecommerce_tools.json  ecommerce_tools.py  pchome_crawler.py  routn_crawler.py  scraper.py  yahoo_crawler.py
