[project]
name = "ecom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "faiss-cpu==1.11.0",
    "flask==3.1.1",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-google-genai==2.1.4",
    "langgraph==0.4.5",
    "numpy==2.2.6",
    "playwright==1.52.0",
    "pydantic==2.11.5",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
]
